src/widgets/snapshots/timr_tui__widgets__local_time_test__local_time_hh12mm_pm.snap
---
source: src/widgets/local_time_test.rs
expression: t.backend()
---
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                         █████    █████ █████ PM                      "
"                            ██ ██    ██ ██ ██                         "
"                         █████    █████ ██ ██                         "
"                         ██    ██    ██ ██ ██                         "
"                         █████    █████ █████                         "
"                                                                      "
"                              LOCAL TIME                              "
"                              2024-06-10                              "
"                                                                      "
"                                                                      "
"                                                                      "
