src/widgets/snapshots/timr_tui__widgets__local_time_test__local_time_hhmmss.snap
---
source: src/widgets/local_time_test.rs
expression: t.backend()
---
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                  ██ ██ ██    █████ █████    █████ █████              "
"                  ██ ██ ██ ██    ██ ██ ██ ██ ██ ██ ██ ██              "
"                  ██ █████    █████ ██ ██    ██ ██ ██ ██              "
"                  ██    ██ ██    ██ ██ ██ ██ ██ ██ ██ ██              "
"                  ██    ██    █████ █████    █████ █████              "
"                                                                      "
"                              LOCAL TIME                              "
"                              2024-06-10                              "
"                                                                      "
"                                                                      "
"                                                                      "
